--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,3 +92,10 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+
+  assets:
+    - assets/images/Simulator Screenshot - iPhone 15 - 2024-09-07 at 15.25.31.png
+    - assets/images/simulator_screenshot_206DA7F9-034E-42AA-B5F9-F9776952FAE1.png
+
+
